--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,16 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html,
+body {
+  font-family: Poppins, Arial, sans-serif;
+  font-size: 62.5%;
+  letter-spacing: 0.05rem;
+}
+
+p {
+  font-size: 1.6rem;
+  line-height: 2.4rem;
 }
